added sidenav component

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -43,7 +43,7 @@
 .headerContainer .flexEndItems .Link {
   color: #647787;
   cursor: pointer;
-  margin-top: -.2em;
+  margin-top: -0.2em;
 }
 
 .headerContainer .flexEndItems .name {
