--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,63 +1,62 @@
 .headerContainer {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  background: #ffffff;
+  box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
+  .brand {
+    color: #1875f0;
+    font-style: normal;
+    font-weight: 900;
+    cursor: pointer;
+    flex: 0.5;
+    margin-left: 1.5em;
+  }
+  .flexEndItems {
     display: flex;
-    justify-content: space-between;
-    flex-flow: row wrap;
-    background: #ffffff;
-    box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
-    .brand {
-      color: #1875f0;
-      font-style: normal;
-      font-weight: 900;
+    align-items: center;
+    flex: 1;
+    justify-content: space-evenly;
+    .Link {
+      color: #647787;
       cursor: pointer;
-      flex: 0.5;
-      margin-left: 1.5em;
+      margin-top: -0.2em;
     }
-    .flexEndItems {
-      display: flex;
-      align-items: center;
-      flex: 1;
-      justify-content: space-evenly;
-      .Link {
-        color: #647787;
-        cursor: pointer;
-        margin-top: -.2em;
-        
-      }
-      .name {
-        color: #647787;
-        cursor: pointer;
-        ul {
-          list-style-type: none;
-          .first {
-            text-align: right;
-            font-size: 0.5em;
-          }
-          .second {
-            font-size: 0.7em;
-          }
+    .name {
+      color: #647787;
+      cursor: pointer;
+      ul {
+        list-style-type: none;
+        .first {
+          text-align: right;
+          font-size: 0.5em;
+        }
+        .second {
+          font-size: 0.7em;
         }
       }
-      .profilePicture {
-        background: url(../../logo.svg) no-repeat 100%;
-        display: block;
-        width: 2em;
-        height: 2em;
-        border-radius: 50%;
-        border: 1px solid red;
-        display: block;
-      }
+    }
+    .profilePicture {
+      background: url(../../logo.svg) no-repeat 100%;
+      display: block;
+      width: 2em;
+      height: 2em;
+      border-radius: 50%;
+      border: 1px solid red;
+      display: block;
     }
   }
-  
-  /* form style */
+}
+
+/* form style */
 .Form {
   display: flex;
   flex: 1;
   align-self: center;
   height: 2.5em;
   position: relative;
-  margin-top:15px;
-  margin-left:50px;
+  margin-top: 15px;
+  margin-left: 50px;
 
   .Icon {
     position: absolute;
