--- a/src/components/SideNav/sidenav.css
+++ b/src/components/SideNav/sidenav.css
@@ -7,7 +7,7 @@
       -ms-flex-flow: column wrap;
           flex-flow: column wrap;
   color: #647787;
-  width: 20%;
+  background-color: #fff;
 }
 
 .sideBarContainer h4 {
