--- a/src/components/SideNav/sidenav.scss
+++ b/src/components/SideNav/sidenav.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-flow: column wrap;
     color: #647787;
-    width:20%;
+    // width:20%;
+    background-color:#fff;
     
    
 
