--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -10,6 +10,7 @@
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
   background: #ffffff;
+  z-index: 1;
   -webkit-box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
           box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
 }
