--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   flex-flow: row wrap;
   background: #ffffff;
+  z-index: 1;
   box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
   .brand {
     color: #1875f0;
