--- a/src/components/tableData/tabledata.css
+++ b/src/components/tableData/tabledata.css
@@ -1,9 +1,10 @@
 table {
-  width: 100%;
+  width: 130%;
   border-collapse: collapse;
   margin: 50px auto;
   overflow-x: auto;
   outline: none;
+  color: #414042;
 }
 
 tr:nth-of-type(odd) {
@@ -112,5 +113,51 @@ td {
 
 .status .text_grey {
   color: #7F8FA4;
+}
+
+.Form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -ms-flex-item-align: center;
+      align-self: center;
+  height: 2.5em;
+  position: relative;
+  margin-top: 15px;
+  margin-left: 50px;
+}
+
+.Form .Icon {
+  position: absolute;
+  color: #0e1d25;
+  top: 0.2em;
+}
+
+.Form .input_table {
+  margin-left: 2em;
+  border-bottom: 0.5px solid #787878;
+}
+
+.select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: white;
+  border: none;
+  border-radius: 0;
+  cursor: pointer;
+  padding: 12px;
+  width: 100%;
+  font-size: 18px;
+}
+
+.select:focus {
+  color: black;
+}
+
+.select::-ms-expand {
+  display: none;
 }
 /*# sourceMappingURL=tabledata.css.map */
