--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -13,6 +13,7 @@
   z-index: 1;
   -webkit-box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
           box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
+  width: 100%;
 }
 
 .headerContainer .brand {
