--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -5,6 +5,7 @@
   background: #ffffff;
   z-index: 1;
   box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
+  width:100%;
   .brand {
     color: #1875f0;
     font-style: normal;
