--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -67,12 +67,11 @@
 }
 
 .headerContainer .flexEndItems .profilePicture {
-  background: url(../../logo.svg) no-repeat 100%;
+  background: url(../../avatar-img.png) no-repeat 100%;
   display: block;
   width: 2em;
   height: 2em;
   border-radius: 50%;
-  border: 1px solid red;
   display: block;
 }
 
