--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -5,7 +5,7 @@
   background: #ffffff;
   z-index: 1;
   box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
-  width:100%;
+  width: 100%;
   .brand {
     color: #1875f0;
     font-style: normal;
@@ -39,12 +39,12 @@
       }
     }
     .profilePicture {
-      background: url(../../logo.svg) no-repeat 100%;
+      background: url(../../avatar-img.png) no-repeat 100%;
       display: block;
       width: 2em;
       height: 2em;
       border-radius: 50%;
-      border: 1px solid red;
+
       display: block;
     }
   }
