--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -2,6 +2,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-family: 'Roboto', sans-serif;
 }
 
 .container .containerBoxes {
@@ -72,7 +73,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border: 2px solid red;
 }
 
 .chart_data {
@@ -80,6 +80,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: 14px;
   margin-top: 15px;
 }
 
