--- a/src/components/tableData/tabledata.css
+++ b/src/components/tableData/tabledata.css
@@ -179,7 +179,7 @@ td {
   margin-left: 99px;
 }
 
-.pagination a {
+.pagination button {
   color: black;
   float: left;
   padding: 8px 16px;
@@ -188,22 +188,22 @@ td {
   font-size: 13px;
 }
 
-.pagination a.active {
+.pagination button.active {
   background-color: #1875F0;
   color: white;
   border: 1px solid #1875F0;
 }
 
-.pagination a:hover:not(.active) {
+.pagination button:hover:not(.active) {
   background-color: #ddd;
 }
 
-.pagination a:first-child {
+.pagination button:first-child {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
 
-.pagination a:last-child {
+.pagination button:last-child {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
